# altiumate

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  altiumate.py  find_altium.bat  generate_outputs.pas  inputs.pas  precommit.PrjScr  pyproject.toml
altiumate/: __init__.py  config.py  main.py
altiumate/AD_scripting/: altiumate.pas  generate_outputs.pas  modified_check.pas  precommit.PrjScr  utils.pas
